Test overflow fix for #2

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,6 +27,10 @@
   font-weight: 100;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
